HTMLAreaElement's coords attributes parsing does not comply with the HTML specification https://bugs.webkit.org/show_bug.cgi?id=161216

Reviewed by Andreas Kling.

LayoutTests/imported/w3c:

Rebaseline W3C test now that all checks are passing. Chrome is also passing all the checks.

* web-platform-tests/html/semantics/embedded-content/the-area-element/area-coords-expected.txt:

Source/WebCore:

HTMLAreaElement's coords attributes parsing does not comply with the HTML specification:
- https://html.spec.whatwg.org/#attr-area-coords

This patch aligns our parsing of this attribute with the specification and Chrome.

No new tests, rebaselined existing test.

* html/HTMLAreaElement.cpp:
(WebCore::HTMLAreaElement::HTMLAreaElement):
(WebCore::HTMLAreaElement::parseAttribute):
(WebCore::HTMLAreaElement::getRegion):
* html/HTMLAreaElement.h:
* html/parser/HTMLParserIdioms.cpp:
(WebCore::isHTMLSpaceOrDelimiter):
(WebCore::isNumberStart):
(WebCore::parseHTMLListOfOfFloatingPointNumberValuesInternal):
(WebCore::parseHTMLListOfOfFloatingPointNumberValues):
(WebCore::parseHTMLNonNegativeInteger): Deleted.
* html/parser/HTMLParserIdioms.h:

LayoutTests:

Unskip web-platform-tests/html/semantics/embedded-content/the-area-element/area-coords.html
as it is now passing and not longer crashing in debug builds.

* TestExpectations:


Canonical link: https://commits.webkit.org/179406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205030 268f45cc-cd09-0410-ab3c-d52691b4dbfc